# CGraph

./: .gitignore  .gitmodules  .research-eval.toml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  vcpkg.json
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  onboard.md  propose.md  sync.md  verify.md
.factory/commands/: opsx-bulk-archive.md  opsx-onboard.md  opsx-verify.md
.github/workflows/: ci.yml
bench/: README.md  baseline-report.md  bench.mjs  gen_tree.py  run.sh
cmake/: CgraphSanitizers.cmake  CgraphWarnings.cmake
docs/: benchmark-report.md  experience-gate-benchmarks.md  experience-gate-decision.md  host-skill-contract.md  session-memory.md
integrations/always-on/: SKILL.md  cgraph-always-on.sh  cgraph-enrich-drain.sh
integrations/hooks/: cgraph-hook.sh
integrations/skills/cgraph/: SKILL.md
integrations/skills/cgraph-enrich/: SKILL.md
openspec/: config.yaml
openspec/changes/adaptive-context-gathering/: proposal.md  tasks.md
openspec/changes/add-go-extractor/: proposal.md
openspec/changes/async-enrichment-refresh/: proposal.md
openspec/changes/background-graph-refresh/: tasks.md
openspec/changes/build-native-graphify-variant/: design.md  tasks.md
openspec/changes/cache-aware-rescan/: proposal.md  tasks.md
openspec/changes/cache-enrichment-plan-hashing/: proposal.md
openspec/changes/default-adaptive-context-gather/: tasks.md
openspec/changes/extract-unquoted-sql-identifiers/: design.md  tasks.md
openspec/changes/fix-daemon-dedup-order/: tasks.md
openspec/changes/fix-fragment-offset-collision/: tasks.md
openspec/changes/fix-quadratic-fragment-merge/: proposal.md
openspec/changes/harden-daemon-boundaries/: tasks.md
openspec/changes/host-enrichment-driver/: tasks.md
openspec/changes/lexical-focal-resolution/: design.md  proposal.md
openspec/changes/operation-stats-ledger/: tasks.md
openspec/changes/parallelize-extraction/: proposal.md
openspec/changes/persist-incremental-index/: design.md  proposal.md
openspec/changes/persist-op-stats-ledger/: proposal.md  tasks.md
openspec/changes/reconcile-enrich-drainer/: proposal.md
openspec/changes/reduce-opus-cost-routing/: design.md  tasks.md
openspec/changes/reproducible-ci-dependencies/: design.md  proposal.md  tasks.md
openspec/changes/same-file-gather-expansion/: design.md  proposal.md  tasks.md
openspec/changes/semantic-connectivity-metric/: design.md  proposal.md
openspec/changes/verified-graph-freshness/: design.md  proposal.md  tasks.md
openspec/specs/agent-tooling-cost-controls/: spec.md
openspec/specs/cross-service-seam/: spec.md
openspec/specs/deterministic-graph-pipeline/: spec.md
openspec/specs/graph-daemon-client/: spec.md
openspec/specs/graph-session-memory/: spec.md
openspec/specs/host-integration-mcp/: spec.md
openspec/specs/reproducible-ci-dependencies/: spec.md
openspec/specs/resident-daemon-supervisor/: spec.md
scripts/: benchmark_daemon_query.py  benchmark_one_shot.py  bootstrap_eval.py
src/cli/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client_runtime.cpp  main.cpp
src/client/include/cgraph/: client_runtime.hpp
src/daemon/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  analysis.cpp  configured_extractors.cpp  cpp_extractor.cpp  daemon_endpoint.cpp  daemon_identity.cpp  daemon_lifecycle.cpp  daemon_ops.cpp  daemon_security.cpp  daemon_server.cpp  daemon_supervisor.cpp  dedup.cpp  detect.cpp  engine.cpp  enrich_drainer.cpp  export_json.cpp  extractor.cpp  file_cache.cpp  file_extraction.cpp  file_watcher.cpp  fragment_json.cpp  graph_builder.cpp  incremental_update.cpp  index_persistence.cpp  javascript_extractor.cpp  language_config.cpp  launch_agent.cpp  non_grammar_extractors.cpp  normalize.cpp  operation_stats.cpp  parser_pool.cpp  path_ignore.cpp  pipeline.cpp  protocol.cpp  python_extractor.cpp  seam.cpp  semantic_cache.cpp  semantic_chunk_plan.cpp  semantic_code_links.cpp  semantic_connectivity.cpp  (+6 more)
src/engine/include/cgraph/: analysis.hpp  configured_extractors.hpp  content_root.hpp  cpp_extractor.hpp  daemon_endpoint.hpp  daemon_identity.hpp  daemon_lifecycle.hpp  daemon_ops.hpp  daemon_security.hpp  daemon_server.hpp  daemon_supervisor.hpp  dedup.hpp  detect.hpp  engine.hpp  enrich_drainer.hpp  export_json.hpp  extractor.hpp  file_cache.hpp  file_extraction.hpp  file_watcher.hpp  fragment_json.hpp  graph_builder.hpp  incremental_update.hpp  index_persistence.hpp  javascript_extractor.hpp  language_config.hpp  launch_agent.hpp  non_grammar_extractors.hpp  normalize.hpp  operation_stats.hpp  parser_pool.hpp  path_ignore.hpp  pipeline.hpp  protocol.hpp  python_extractor.hpp  seam.hpp  semantic_cache.hpp  semantic_chunk_plan.hpp  semantic_code_links.hpp  semantic_connectivity.hpp  (+7 more)
src/mcp/: CMakeLists.txt  main.cpp  mcp_server.cpp
src/mcp/include/cgraph/: mcp_server.hpp
tests/fuzz/: CMakeLists.txt  extractor_fuzzer.cpp  fuzz_smoke.cpp
tests/smoke/: CMakeLists.txt  always_on_integration_test.cpp  analysis_test.cpp  client_runtime_test.cpp  configured_extractors_test.cpp  cpp_extractor_test.cpp  daemon_endpoint_test.cpp  daemon_hardening_test.cpp  daemon_identity_test.cpp  daemon_lifecycle_test.cpp  daemon_ops_test.cpp  daemon_persistence_test.cpp  daemon_security_test.cpp  daemon_server_test.cpp  daemon_snapshot_test.cpp  daemon_supervisor_test.cpp  dedup_test.cpp  detect_test.cpp  enrich_drainer_test.cpp  export_json_test.cpp  extractor_goldens_test.cpp  extractor_hardening_test.cpp  extractor_test.cpp  file_cache_test.cpp  file_extraction_test.cpp  file_watcher_test.cpp  fragment_json_test.cpp  graph_builder_test.cpp  graph_parity_test.cpp  hook_integration_test.cpp  host_contract_test.cpp  host_surface_integration_test.cpp  id_normalization_test.cpp  incremental_dedup_test.cpp  incremental_rescan_test.cpp  incremental_update_test.cpp  index_persistence_test.cpp  javascript_extractor_test.cpp  language_config_test.cpp  mcp_server_test.cpp  (+23 more)
triplets/: x64-linux-clang.cmake
(+160 files in other folders)
